# ChangeLog for media-libs/libmikmod
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libmikmod/ChangeLog,v 1.117 2014/03/28 03:53:02 jer Exp $

  28 Mar 2014; Jeroen Roovers <jer@gentoo.org> libmikmod-3.3.5.ebuild:
  Stable for HPPA (bug #495798).

*libmikmod-3.3.6 (21 Mar 2014)

  21 Mar 2014; Alexis Ballier <aballier@gentoo.org> +libmikmod-3.3.6.ebuild:
  version bump

*libmikmod-3.3.5 (11 Jan 2014)

  11 Jan 2014; Alexis Ballier <aballier@gentoo.org> +libmikmod-3.3.5.ebuild:
  version bump

  17 Dec 2013; Samuli Suominen <ssuominen@gentoo.org> libmikmod-3.3.4.ebuild:
  Introduce USE="nas" for media-libs/nas support thanks to upstream fixing the
  nas code that was broken for years.

*libmikmod-3.3.4 (10 Dec 2013)

  10 Dec 2013; Alexis Ballier <aballier@gentoo.org> +libmikmod-3.3.4.ebuild:
  version bump

*libmikmod-3.3.3 (26 Oct 2013)

  26 Oct 2013; Alexis Ballier <aballier@gentoo.org> +libmikmod-3.3.3.ebuild:
  version bump

*libmikmod-3.3.2 (11 Oct 2013)

  11 Oct 2013; Samuli Suominen <ssuominen@gentoo.org> +libmikmod-3.3.2.ebuild:
  Version bump; with temporarily disabled openal, sdl and sdl2 support because
  they haven't been converted to the new multilib format yet.

  27 Jun 2013; Alexis Ballier <aballier@gentoo.org> libmikmod-3.2.0-r1.ebuild:
  Hardcode Libs in the .pc file since libmikmod-config is really broken: it
  gives -L/usr/lib64 as soon as it exists...

  27 Jun 2013; Alexis Ballier <aballier@gentoo.org> libmikmod-3.2.0-r1.ebuild:
  add a blocker on emul-linux-soundlibs

  27 Jun 2013; Alexis Ballier <aballier@gentoo.org> libmikmod-3.2.0-r1.ebuild:
  Add missing MULTILIB_USEDEP on alsa-lib. Add altivec, debug and threads
  useflags. Disable dlopening its libraries and link to them instead: We have
  tools to detect breakage in case its linked, it is more complicated with
  dlopen.

  03 May 2013; Samuli Suominen <ssuominen@gentoo.org> libmikmod-3.2.0.ebuild,