@@ -8,13 +8,17 @@ DIST mikmod-3.2.5.tar.gz 285801 SHA256 da2b4b13f769a7c54119869851c8e6b9a6ca812b9
 EBUILD mikmod-3.2.2.ebuild 575 SHA256 88696ddcee1eee36b0d12e47a67df02f5d92c7cb8151944c8b82383192bcf075 SHA512 154c9cce8bfca2108477c6b81dde810ad11b8998b477ef05078f3f5457f3ef66f4de68f2b237981aa2f7e022e4f382a33a8f83dfb0d535902708f0d7c0e9bc99 WHIRLPOOL 1f3db69afebfb1c091d63ca742214687b6fca9d08db958a2c1c425c5bb49daf59133e18146b5baa8e21f081903f017988dadc2cace663674ff09389464c0b2be
 EBUILD mikmod-3.2.3.ebuild 587 SHA256 4d208b7bc958592e2222ce9ae8b74c934397dad61dadd962759e917544d418eb SHA512 e95d3d95a1ac4d232c13fa0b07a90e3e94c32fc1dfd40d3120b81d545e2f16be56ee4544ca1adbdc86826efabcb7287a2674b23c780a41c45320e80ba8b07157 WHIRLPOOL be6b639b352b4940c1e52a5bc45b5f743f58412fbd368afc84e4231f0b810f12cae3c9b5b2dcd7124202f87730bfa0e6a05eb313dbe56aa72e6b9475e13c691e
 EBUILD mikmod-3.2.4.ebuild 580 SHA256 921f441b07c3e8a3c427bcb164942d2d1689203bc79c95aca1e527548cac6902 SHA512 435404045a0771e2de8676c2907a45c732a391b9ef82e397ff4a4338b405d220b29cf5134fb518a3e32fd049a9280ead7eec3fb68464840edb63281c5802c781 WHIRLPOOL f05b59c0d61656794fedca38f4c5006d21f8e4629aabf34f7c3af52dc857c4e800e1c5f08793e4db1bfe6af7738ad36d2f3da3ca5a49b2665b790ef70b45e3a1
-EBUILD mikmod-3.2.5.ebuild 574 SHA256 e40082107c251d7a2df6e328c6c9566db22eedfa233ec35ae0f7b38ef1c82e35 SHA512 74671a29130f7bfe7579f078443fd12dac8533197e1658e3863eb11360898813a04a6629fd50873efb7b4986f8506b1eabcd584b866e77df644b20c5c512da01 WHIRLPOOL 4ea7c4eaef41287711105b82ce61f1ac070589a4c445c0588f2c18c4b7729549701fab1cb8caeafb12379cf17e359364d3d79c98229ad2427ba27fe98802c974
-MISC ChangeLog 3461 SHA256 a97386bd40711082a4db6c94a8083c92b56d8b0cb98aaaf62fef3df40013f342 SHA512 974ac80565fe4d146afeb724610f832cfc9f301e8717b581a84730cc821aed0b0287e619cf39a05a0ac714829fde257718f0a5c6b3edea27aa56712945a0ff69 WHIRLPOOL a2346da2b3d18e9111cc4bbef6491383ba7cc3bd7a8705ca380b7a5bdc8c2f4ffc7095acc8495d2cfc0e5d336488c43a7b681e9c61cc2f741925d985f3278e1f
+EBUILD mikmod-3.2.5.ebuild 576 SHA256 41bf2e0cc0071929ee737d0ad2c14d2c16131f969d91c2941bd7d6c6b3131b19 SHA512 1c34302b33905d9bc7a7a81d17ce74542357cde2bc043d6250524f15fdd3d2aeea2c898945d43b8b9980f4d1c665fce609b09e2ffec39750398fd52de0bc3c76 WHIRLPOOL 1a8049171898ce2c4a11efe97be1e5680e84f9de4aef6fd05822e4259a284d6806298dbc75ae2d446d9f74409472a4821376f205b9c0a57efe80427dc29d0b93
+MISC ChangeLog 3569 SHA256 de10dcb47c8d339fbb0697c2e2eb23a8a707583905f6855a009f11bdad4d4658 SHA512 8fa991f6dacd1ff5fe26f5e506e6dcf8ad24cc9363024e7b4efcc7c4ae1fdb24105a7a2aa8f3e2552cf5260fff004cf9b415d3f04ae90fc5769fde391ce64a79 WHIRLPOOL cda8d5eb31290de4afbff6c4a76c66c728a82f4b36f4247b9938be1b5383826c8cf1bf0e08830bf87bddc771951be14c37836bd6915a9213e30ba6ea9ac241a1
 MISC metadata.xml 158 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b SHA512 90f74979d228a35f81de50665ead63d228bc4f0d11f3def4832c9607f4242cbc4562db0a123bdcf2c4b6e0be78fc5565a65f75cdb53ed4c8d45544ebf74255dc WHIRLPOOL a90483bd4fa01ed5fa21bfe9f59c11b97c793146e3031eae342a3355c6dc2e4ef2b356af0bf711b5e16e16551c91d63ecdbb48e708df606017264e8bff5e9fe9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlM08bEACgkQVWmRsqeSphObVgCaA0SIcqkLf/W07I1iJnRoNIFu
-mGIAn1K0KePhB2tq81SlcOiJAvww8eDw
-=JOQb
+iQEcBAEBCAAGBQJTVUK7AAoJEA2sAkrWKOU2UXYH/3fDKj9nPcIW9pd5NsBfTvUS
+FUIsRhpm9gC8lHPrpgj+OFrIdl3ecr2OzzG7t1f5eXvPmQ5gJll+ipzqXYOPPwSd
+z0/Xv/sLq583Hsgb9mugavjkinuUPrOR7VtnG7gSwZLQMctMB16EsFBvvuvCHDaf
+MzDbinP5J1hgz3guQvrZHWu0p/U8K4raUtKYZjsJtf62Bayso2HKjfgnRoDyR/CF
+qCSd4J6Wm0il6+4kDW8l7ggTN008Ek7viqXUv5iD6kDHVtcyedVmqUbJZ5uqDKon
+Es6bCmYoGV3WFNUVW69cz0sURremaZ81IwhGMQ/UYwddKqi40T6l4svbnt6X4l4=
+=OjTa
 -----END PGP SIGNATURE-----
