@@ -4,11 +4,11 @@ DESCRIPTION=A library to play a wide range of module formats
 EAPI=5
 HOMEPAGE=http://mikmod.sourceforge.net/
 IUSE=+alsa altivec coreaudio debug nas openal oss pulseaudio sse2 static-libs +threads abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32
-KEYWORDS=~alpha ~amd64 ~arm hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos
+KEYWORDS=~alpha amd64 ~arm hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos
 LICENSE=LGPL-2+ LGPL-2.1
 RDEPEND=alsa? ( media-libs/alsa-lib:=[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?] ) nas? ( media-libs/nas:=[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?] ) openal? ( >=media-libs/openal-1.15.1-r1[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?] ) pulseaudio? ( >=media-sound/pulseaudio-4.0-r1[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?] ) !media-libs/libmikmod:2 abi_x86_32? ( !<=app-emulation/emul-linux-x86-soundlibs-20130224-r3 !app-emulation/emul-linux-x86-soundlibs[-abi_x86_32(-)] )
 REQUIRED_USE=|| ( alsa oss coreaudio )
 SLOT=0
 SRC_URI=mirror://sourceforge/mikmod/libmikmod-3.3.5.tar.gz
 _eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	multibuild	576bde67ccb00fe7175a23755deb2e66	multilib	fac675dcccf94392371a6abee62d909f	multilib-build	9cb17afdb3e9bf8da0e682a348fe5bd8	multilib-minimal	a481090a413ba6970bd9643494ef982f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=6fa0b11e3941f09f748983f3bdf8a2da
+_md5_=bba45fc62c13d31b25e7b567fb90c2c9
