@@ -3,9 +3,9 @@ DEPEND=>=media-libs/libmikmod-3.2.0 >=sys-libs/ncurses-5.7-r7
 DESCRIPTION=A console MOD-Player based on libmikmod
 EAPI=5
 HOMEPAGE=http://mikmod.sourceforge.net/
-KEYWORDS=~alpha ~amd64 hppa ~ia64 ~ppc ~sparc ~x86
+KEYWORDS=~alpha amd64 hppa ~ia64 ~ppc ~sparc ~x86
 LICENSE=GPL-2
 RDEPEND=>=media-libs/libmikmod-3.2.0 >=sys-libs/ncurses-5.7-r7
 SLOT=0
 SRC_URI=mirror://sourceforge/mikmod/mikmod-3.2.5.tar.gz
-_md5_=ea2469bf59f3fdc2f298df70862c97b3
+_md5_=c1e88b0740288279ff148d3e6d011961
