@@ -2,9 +2,9 @@ DEFINED_PHASES=install prepare
 DESCRIPTION=Assembler and loader used to create kernel bootsector
 EAPI=5
 HOMEPAGE=http://v3.sk/~lkundrak/dev86/
-KEYWORDS=-* ~amd64 ~x86 ~amd64-fbsd ~x86-fbsd
+KEYWORDS=-* amd64 ~x86 ~amd64-fbsd ~x86-fbsd
 LICENSE=GPL-2
 SLOT=0
 SRC_URI=http://v3.sk/~lkundrak/dev86/bin86-0.16.20.tar.gz https://github.com/lkundrak/dev86/commit/2c95336f19eeff761ecb858c5a2a58484bb3ceeb.patch -> bin86-0.16.20-fix_lilo_build.patch
 _eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=2025e1d814535a826d6dcfd47cda0bfa
+_md5_=d82462b2c39f66cc5a1cb9fd48fce26b
