@@ -12,23 +12,17 @@ DIST bin86-0.16.20.tar.gz 154107 SHA256 00dcf75f75080b4a51d137f14fe787d8144d12ff
 EBUILD bin86-0.16.17.ebuild 1012 SHA256 3e58664d4a5526113000fffd42b0a5e757da904f7345a61fa3a01f64d7744781 SHA512 dbb5732b82af0bc84a2350ca4af127b33d74a4acc3a0c9cc2f4b9e02ddba43cda7c4cab5178d2c0cce7b1839eed69ebc17f6d9b1963ba6495d0fa2ab6ea7f8d9 WHIRLPOOL dc2de261865fe18327eccd7e21a591d60b0016b223b5f28ce041fada577ec7e7294559e9f76c138404b123002091c7831975eac48a1d33fa19ab7d34799ea7b7
 EBUILD bin86-0.16.18.ebuild 937 SHA256 566a8acb1b51e110e5ffbb7da9b88c78317f6b34a1da5bbcbf17de39e326b286 SHA512 437baa99c2d7c25ac2545f4b09327ac82b275344e82f7a72ffd16d9e7c8460953b07142d6916ab06ab8486c4f768474336ac4d88d2acab0d57f9c9740ff04558 WHIRLPOOL 46d70852a6250787518a8bae99029db098b20fb79f7d4f96b8e8de88cd484c5693427d179ea6a5577069d6d9b02b6dd05b8c9e2f1e2d1773a3e8a034f2bb7a86
 EBUILD bin86-0.16.19.ebuild 955 SHA256 646eace2cfb79a9b9bddb0959aee0d8f835f0ccb3ce1a708085debdb9bf6eb35 SHA512 16e347886fdc03f49078cda63740c449842f75def4c3634981ae767a49fe29341a51ab28b5cd69234ac066384794ed202b9eb4956be6bdcce2ea4997b3850fb2 WHIRLPOOL ca92fe8c0be2fb75cf669e635b7f70f40299d57c07f785f42707716ff8b7574e7f22ccc03e8d24c15a8dd5cecdc36718dff774f32265430d188114ed2b622e98
-EBUILD bin86-0.16.20-r2.ebuild 1084 SHA256 4461f2304236a15ac0deeb64ea7b5e23fe12d6f0982f3666e7bc95ec764066af SHA512 a67170facecb9f2359826c408d449d467c1675cdc577b338d04258319c6043fc564b0fd8dc2fca8a84141a30bbdc1bf7bc0077d38e6159f5d7cafcc0aa90d694 WHIRLPOOL ca330aa3d1eba9fbfe97657f29badbb6a63b3532d4ea1526682c5e36b1e6bef00024e46df742f93f81ca16a09a7ee766f93d7305613adbbd3d1ef97ea054790b
-MISC ChangeLog 4514 SHA256 e6e449935e64fdd6cf7354fa954767a9487517b4abf7e33db462d2ce7d03de89 SHA512 559fc59612c381100b4d5bea403a8fb40134b4023fe9a714986bb1b313758a55fb43a190a52426b300605c9d244c4599825aeea9f1e614d38b39363e28fd2a61 WHIRLPOOL 8a549d84f13080c3b524c97ca161b1106ccd855f6ac2fcc2d379fa2019c7772caa5296718ce08324da059b52464ddbf138aded8a785cecd4d0429d5556b95813
+EBUILD bin86-0.16.20-r2.ebuild 1077 SHA256 95534ce1fcce703bff737f8e006448c7a7eade622d2b54cdf51233c777153a8e SHA512 e56827d061daf160db2d5b8ab86af69d751ca78e41813030f3111b5bff4aa9470de0aa8eaa7cf8ae7d93af636d5d6cace64380ab254144969de1ce884bc5d31f WHIRLPOOL e78aa62971566564c79cf8e8c89d50e707a28eae6d2272a20578999147e639a21a2c45ca327f1c152b2383d12420dad56f4cf10b3dc523c8df0b021baaac9a10
+MISC ChangeLog 4617 SHA256 3d9b5d08ba0328367649cc03d66aba5a3836405d45663d93aa916d6fa5eb3504 SHA512 665a252daa0fd8e138ff88d10af93876199d5e37cac3beb39278d563d2951f8c27bdb9316515cd0f7035fd3b79b18a9d13ccf5f46371b20826fd45d681519ef5 WHIRLPOOL 8522c4a7d92fa7be42e937772b03a974908279ddcd6e963e87276bce3659b44d0720ad802c0a141b2524264cf2a4956e6abfa0b12fcc32abaf02a59530f800ba
 MISC metadata.xml 319 SHA256 1ccfe2384962ce56aa526105e30acd99af6ddfd361a67e2dfe7367a56a69e3d4 SHA512 5fe63911211427ce913c754d545745cdfd32b7a911b1a683f51851572c03c72e5c7298d0ecf6b31737bf749b08fb1750d994034173160b505c77cdd80e0449c6 WHIRLPOOL 2269f48062db5bf98210b417466f1349d3898c3660c870a2761a96e6f69f8091c44d0e3a8fba43dea0b6f59bbe500b6e9be3638e468f2c7dfb99054776839bf6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSxRdDAAoJEPiazRVxLXTFuh0P/3cai47fIGSvP7kBghcKSYBH
-D4CtD15iBguob3+qoLeXbS+Vh6ztDFVO8pnZih3sMHNMoBXNcyRyuC1xyYtqubhg
-Z7c/H0eVlFQYNwMwEHe4VVx0lETzpb8DLfXQCXfJB9BXJ6yoS5TekxT0Lk19vKtI
-TJ0Ts0XrnTaQTXIhD4kkNpvFeBFxjraAnqQifriXMzfkHH19h4IX1PvGLUJiO5jJ
-Zaa6B1xsCw2+BzDUUdPWPG0NF66JKLihJAaxSiAi6j6EYpeq50iaba6mACFulz2v
-9nU/f4SLlwpttR+PJGOA5npkwwpArkxiIP/59oueW5Q/56lI9GrQCxSeHak29UfT
-+3XeRxf8yxlKEw3M+2YEckjKSmlHua0XK+njlhVq+p/b5nZnJYF74CrTr92z6Xur
-H63YcFosPZ8Mv6rjbsUuVaOrDeF+bH7fuffBjPSzEb3G0AUL6DEqxh3eDiqbrVmK
-US7E8lu6S4vNusaPJ9fyeAsN3C/OsFsrewZAQjcsfK0eI72dOId2KLDywDli1Yyz
-r6rB3PjGYFIL6pdyg2xdUPEjy0EvzQj0wc16O8SFueDbHDjI14DSEoTafV6UK+xM
-irZn1Xv1Hd2Wj2S1l0RVPAWz7o/S9c6/VtLLrV0HSxEleNuern5dcCJkdW5K7sXU
-WBGStO8K3iVhSUOkMRJ6
-=m4/m
+iQEcBAEBCAAGBQJTVUSiAAoJEA2sAkrWKOU2KsUH/RZ1UtTM4rcmWtdEXsWbIJkm
+89tdow2PNylTn8FBko4ebMUiNYT85ucfPOvvdbUzY0YJmKEWLnqy8OhtkNeji2ID
+dBr87HjSS/1Y7OHHC/DJqXHT43npaOG23RVD4J6I2YiiMLCMAtWPNViVmy0wT2FG
+vGp5mGifJMGXJsLSJGe0/Hi3VVeaF4mWsU5JSA5b899qvwimuY2WMyu+ki1Gr5zF
+/4sB6atkvhS4MNf50vbClOkPifl6OtfvPcEhY3EibtpCJyBtRgvVxMkrI1MI/Lnu
+xtmdRhT01gXUSwDh13M54BYDLzLIPFwJ1UYVms/FgwntXP0OSu6+j5lwXhbkLaw=
+=ioX9
 -----END PGP SIGNATURE-----
