@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libmikmod
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmikmod/ChangeLog,v 1.117 2014/03/28 03:53:02 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmikmod/ChangeLog,v 1.118 2014/04/21 16:06:44 nimiux Exp $
+
+  21 Apr 2014; Chema Alonso <nimiux@gentoo.org> libmikmod-3.3.5.ebuild:
+  Stable for amd64 wrt bug #495798
 
   28 Mar 2014; Jeroen Roovers <jer@gentoo.org> libmikmod-3.3.5.ebuild:
   Stable for HPPA (bug #495798).
